--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.0",
-    "dotenv": "^16.1.3"
+    "dotenv": "^16.1.3",
+    "erc721a": "^4.2.3"
   }
 }
