--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.0",
     "dotenv": "^16.1.3",
-    "erc721a": "^4.2.3"
+    "erc721a": "^4.2.3",
+    "eth-ens-namehash": "^2.0.8",
+    "readline": "^1.3.0"
   }
 }
